--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "concat": "^1.0.3",
     "concurrently": "3.1.0",
     "copyfiles": "1.0.0",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.1",
     "rimraf": "2.5.4",
     "tsify": "^4.0.0",
     "typescript": "^2.9",
@@ -31,8 +31,10 @@
     "watchify": "^3.11.1"
   },
   "dependencies": {
+    "@types/node": "^12.12.24",
     "d3": "^3.5.16",
     "material-design-lite": "^1.3.0",
+    "plotly.js-dist": "^1.52.3",
     "seedrandom": "^2.4.3"
   }
 }
