--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "lib": [
+      "es2015",
+      "dom"
+    ],
     "removeComments": true,
     "preserveConstEnums": true
   },
